--- a/src/Jili/ApiBundle/Resources/views/Checkin/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Checkin/info.html.twig
@@ -5,6 +5,74 @@
 <title>积粒网</title>
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/cpsActivity.css') }}" rel="stylesheet" type="text/css">
+<style>
+.loadingFrame {
+    position: fixed;
+    top: 40%;
+    left: 46%;
+    margin: -14px 0 0 -42px;
+    padding: 10px;
+    text-align:center;
+}
+.loadingDot {
+    float: left;
+    width: 7px;
+	width: 0/0;
+	width: 0/9;
+	_width: 0;
+    height: 7px;
+    margin: 3px 4px;
+    background: rgba(0,0,0,.5);
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    opacity: 0;
+    -webkit-animation: loadingFade 1s infinite;
+    -moz-animation: loadingFade 1s infinite;
+    animation: loadingFade 1s infinite;
+}
+.loadingDotWrap{
+	height:10px;
+	float:left;
+	margin-top: 16px;
+}
+.loadingDot:nth-child(1) {
+    -webkit-animation-delay: 0s;
+    -moz-animation-delay: 0s;
+    animation-delay: 0s;
+}
+
+.loadingDot:nth-child(2) {
+    -webkit-animation-delay: 0.1s;
+    -moz-animation-delay: 0.1s;
+    animation-delay: 0.1s;
+}
+.loadingDot:nth-child(3) {
+    -webkit-animation-delay: 0.2s;
+    -moz-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+}
+.loadingDot:nth-child(4) {
+    -webkit-animation-delay: 0.3s;
+    -moz-animation-delay: 0.3s;
+    animation-delay: 0.3s;
+}
+@-webkit-keyframes loadingFade {
+    0% { opacity: 0; }
+    50% { opacity: 0.8; }
+    100% { opacity: 0; }
+}
+@-moz-keyframes loadingFade {
+    0% { opacity: 0; }
+    50% { opacity: 0.8; }
+    100% { opacity: 0; }
+}
+@keyframes loadingFade {
+    0% { opacity: 0; }
+    50% { opacity: 0.8; }
+    100% { opacity: 0; }
+}
+</style>
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script>
 var firstUrl = "{{ firstUrl | raw }}";
@@ -17,18 +85,21 @@ var type = "{{ type }}";
 {% endif %}
 $(document).ready(function(){
 	init(u,type);
-
+	changeWindow();
+	$(window).resize(function() {
+		changeWindow();
+	});
+}); 
+function changeWindow(){
 	//窗口居中垂直
 	var winH = $(window).height();
 	var loginH = $("#loginFrame").height();
-	var loadingH = $(".loadingFrame").height();
 	$("#loginFrame").css({"top":(winH-loginH)/2});
-	$(".loadingFrame").css({"margin-top":(winH-loadingH)/2});
 	//窗口居中水平
 	var winW = $(window).width();
 	var loginW = $("#loginFrame").width();
 	$("#loginFrame").css({"left":(winW-loginW)/2});
-}); 
+}
 function goto(type){
 	switch(type){
 		case 1:
@@ -79,7 +150,13 @@ function sendLoginInfo(){
 
 <div class="loadingFrame">
 	<p class="logo"><img src="{{ asset('images/logo.gif') }}"></p>
-	<p>积粒网正在为您跳转，请稍等...</p>
+	<div class="loadingDotWrap">
+      <p style="font-size: 12px; float: left; color: rgb(102, 102, 102); margin: 0 2px 0 0;">积粒网正在为您跳转，请稍等</p>
+      <div class="loadingDot"></div>
+      <div class="loadingDot"></div>
+      <div class="loadingDot"></div>
+      <div class="loadingDot"></div>
+    </div>
 </div>
 <div id="loginFrame">
 <form action="{{ path('_default_index') }}" method="post" name="form1" id="form1">
