--- a/web/css/cpsActivity.css
+++ b/web/css/cpsActivity.css
@@ -91,6 +91,7 @@
 	position:relative;
 }
 .cpsActivity .activityOverflow ul.activityAll li .more{
+	background-color: rgb(0, 0, 0);
 	background-color: rgba(0, 0, 0, 0.5);
     bottom: -60px;
     height: 60px;
