--- a/web/css/history.css
+++ b/web/css/history.css
@@ -118,6 +118,7 @@
     font-size:12px;
     /*line-height: 30px;*/
     position: absolute;
+	left:12px;
     /*top: 5px;*/
     /*left: 10px;*/
 }
