--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -93,6 +93,8 @@ function addClass(type){
               {% else%}
                   {% if item.incentiveType == 16 %}
                     {{ item.title }}
+                  {% elseif item.incentiveType == 17  %}
+                    <a href="{{ path('_advertiserment_list') }}" target="_blank">{{ item.title }}</a>
                   {% else %}
                     <a href="{{ path('_game_index') }}" target="_blank">{{ item.title }}</a>
                   {% endif %}
@@ -107,7 +109,8 @@ function addClass(type){
                      {{ item.incentive }}米粒
               {% endif %}</td>
           <td>{% if item.createTime %}{{ item.createTime.date }}{% endif %}</td>
-          <td>{% if item.incentiveType==1 or item.incentiveType==2 %}
+          {{ item.incentiveType }}
+          <td>{% if item.incentiveType==1 or item.incentiveType==2 or item.incentiveType==17 %}
                   {% if item.orderStatus==1  %} 已参加
                   {% elseif item.orderStatus==2  %} 确认中
                   {% elseif item.orderStatus==3  %} 已完成
