--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -504,7 +504,7 @@ function addClass(id){
                      {{ item.incentive }}米粒
               {% endif %}</td>
           <td>{{ item.createTime.date }}</td>
-          <td>{% if item.incentiveType==1 or item.incentiveType==2 %}
+          <td>{% if item.incentiveType==1 or item.incentiveType==2 or item.incentiveType==17 %}
                   {% if item.orderStatus==1  %} 已参加
                   {% elseif item.orderStatus==2  %} 确认中
                   {% elseif item.orderStatus==3  %} 已完成
