--- a/src/Jili/BackendBundle/Resources/views/RebateActivity/create.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/RebateActivity/create.html.twig
@@ -13,7 +13,7 @@
 {% block body%}
 {% form_theme form 'form_table_layout.html.twig' %}    
 
-<form action="{{ path('_admin_adActivity_new') }}" method="post" {{ form_enctype(form) }}>
+<form action="{{ path('rebate_activity_admin_new') }}" method="post" {{ form_enctype(form) }}>
 
 {{ form_errors(form) }}
 
@@ -63,6 +63,6 @@
 </form>
 
 <div>
-<a href="{{ path('_admin_adActivity_retrieve') }}">Return</a> | 
+<a href="{{ path('rebate_activity_admin_retrieve') }}">Return</a> | 
 </div>
 {% endblock %}
