--- a/src/Jili/BackendBundle/Resources/views/RebateActivity/edit.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/RebateActivity/edit.html.twig
@@ -13,7 +13,7 @@
 {% block body%}
 {% form_theme form 'form_table_layout.html.twig' %}    
 
-<form action="{{ path('_admin_adActivity_edit', {'id': app.request.get('id') }) }}" method="post" {{ form_enctype(form) }}>
+<form action="{{ path('rebate_activity_admin_edit', {'id': app.request.get('id') }) }}" method="post" {{ form_enctype(form) }}>
 
 {{ form_errors(form) }}
 
@@ -65,7 +65,7 @@
 </form>
 
 <div>
-<a href="{{ path('_admin_adActivity_retrieve') }}">Return</a> | 
-<a href="{{ path('_admin_adActivity_new') }}">Add</a>
+<a href="{{ path('rebate_activity_admin_retrieve') }}">Return</a> | 
+<a href="{{ path('rebate_activity_admin_new') }}">Add</a>
 </div>
 {% endblock %}
