--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -416,13 +416,12 @@
        <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
         <TR height=22>
           <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
-            class=menuParent onclick=expand(12) 
+            class=menuParent onclick=expand("Rebate_activities") 
             href="javascript:void(0);">返利活动管理</A></TD></TR>
         <TR height=4>
           <TD></TD></TR></TABLE>
-      <TABLE id=child12 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
+      <TABLE id="childRebate_activities" style="DISPLAY: none" cellSpacing=0 cellPadding=0 
       width=150 border=0>
-      
            <TR height=20>
           <TD align=middle width=30><IMG height=9 
             src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
