--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -416,11 +416,11 @@
        <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
         <TR height=22>
           <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
-            class=menuParent onclick=expand("Rebate_activities") 
+            class=menuParent onclick=expand(12) 
             href="javascript:void(0);">返利活动管理</A></TD></TR>
         <TR height=4>
           <TD></TD></TR></TABLE>
-      <TABLE id="childRebate_activities" style="DISPLAY: none" cellSpacing=0 cellPadding=0 
+      <TABLE id=child12 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
       width=150 border=0>
            <TR height=20>
           <TD align=middle width=30><IMG height=9 
@@ -442,11 +442,11 @@
        <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
         <TR height=22>
           <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
-            class=menuParent onclick=expand(12) 
+            class=menuParent onclick=expand(13) 
             href="javascript:void(0);">商家活动管理</A></TD></TR>
         <TR height=4>
           <TD></TD></TR></TABLE>
-      <TABLE id=child12 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
+      <TABLE id=child13 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
       width=150 border=0>
       
            <TR height=20>
@@ -530,11 +530,11 @@
        <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
         <TR height=22>
           <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
-            class=menuParent onclick=expand(13) 
+            class=menuParent onclick=expand(15) 
             href="javascript:void(0);">名片录力管理</A></TD></TR>
         <TR height=4>
           <TD></TD></TR></TABLE>
-      <TABLE id=child13 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
+      <TABLE id=child15 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
       width=150 border=0>
 
       <TR height=20>
@@ -587,6 +587,27 @@
               <TR height=4>
           <TD colSpan=2></TD></TR>
 
+
+       </TABLE>
+       
+       <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
+        <TR height=22>
+          <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
+            class=menuParent onclick=expand(16) 
+            href="javascript:void(0);">体验广告检查管理</A></TD></TR>
+        <TR height=4>
+          <TD></TD></TR></TABLE>
+      <TABLE id=child16 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
+      width=150 border=0>
+
+      <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_advertisermentCheck') }}" 
+            target=main>体验广告检查</A></TD></TR>   
+              <TR height=4>
+          <TD colSpan=2></TD></TR>
 
        </TABLE>
          
