--- a/web/css/indexNew.css
+++ b/web/css/indexNew.css
@@ -51,7 +51,15 @@
 	left: 0;
 	top: 118px;
 }
-
+.index section .frame #indexBanner a.indexBanner4 em{
+	color: #FFFF00;
+    font-style: normal;
+    position: absolute;
+    right: 25px;
+    text-align: right;
+    top: 20px;
+    width: 100px;
+}
 .index section .frame #indexBanner a.indexBanner5 {
 	top: 0px;
 	right: 0px;
@@ -410,7 +418,9 @@
 	padding-top: 8px;
 	width: 88%;
 }
-
+.index aside #task ul li.advertiserment dt{
+	color: #EA4C11;
+}
 .index aside #task ul li.signs {
 	background-color: #58B5E1;
     background-position: 57px -27px;
