fixed emar task_type config

--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
@@ -59,6 +59,8 @@ function goto(){
 		        {{  advertiserment.incentive }}米粒
 		{% elseif advertiserment.incentiveType==2 %}<span>购物返利：</span>
 		       最高获消费额{{ reward_rate }}%的米粒
+		{% elseif advertiserment.incentiveType==18 %}<span>购物返利：</span>
+		       最高获消费额{{ reward_rate }}%的米粒
 		{% else %}
 		{% endif %}
 		</p>
