--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -91,16 +91,16 @@ function addClass(type){
           </td>
           <td>{% if item.adid %}<a href="{{ path('_advertiserment_index',{'id':item.adid}) }}" target="_blank">{{ item.title }}</a>
               {% else%}
-                  {% if item.incentiveType == 16 %}
+                  {% if item.incentiveType == 16  or item.incentiveType == 18 %}
                     {{ item.title }}
-                  {% elseif item.incentiveType == 17  %}
+                  {% elseif item.incentiveType == 17   %}
                     <a href="{{ path('_advertiserment_list') }}" target="_blank">{{ item.title }}</a>
                   {% else %}
                     <a href="{{ path('_game_index') }}" target="_blank">{{ item.title }}</a>
                   {% endif %}
               {% endif %} 
           </td>
-          <td>{% if item.incentiveType==2 %}
+          <td>{% if item.incentiveType==2 or item.incentiveType==18  %}
                      {% if item.orderStatus > 1 %}
                         {{ item.incentive }}米粒
                      {% else %}
@@ -109,7 +109,7 @@ function addClass(type){
                      {{ item.incentive }}米粒
               {% endif %}</td>
           <td>{% if item.createTime %}{{ item.createTime.date }}{% endif %}</td>
-          <td>{% if item.incentiveType==1 or item.incentiveType==2 or item.incentiveType==17 %}
+          <td>{% if item.incentiveType==1 or item.incentiveType==2 or item.incentiveType==17 or item.incentiveType==18 %}
                   {% if item.orderStatus==1  %} 已参加
                   {% elseif item.orderStatus==2  %} 确认中
                   {% elseif item.orderStatus==3  %} 已完成
