added emar cps analog page in admin menu . issue #249

--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -277,6 +277,12 @@
           <TD><A class=menuChild 
             href="{{ path('jili_backend_analogofferwow_api') }}" 
             target=main>Offer-Wow广告</A></TD></TR>
+        <TR height=20>
+          <TD align=middle width=30><IMG height=9 src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD>
+            <A class="menuChild" href="{{ path('jili_emar_analog_cps') }}" target=main>Emar-CPS广告</A>
+          </TD>
+         </TR>
        </TABLE>
 
        <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
